# Decodium-3.0-Codename-Raptor

./: CMakeLists.txt  Configuration.cpp  Configuration.hpp  Configuration.ui  DisplayManual.cpp  LAYOUT_GUIDE.md  PrecisionTime.hpp  README  README.md  RELEASE_TELEGRAM.md  Radio.cpp  UpdateChecker.cpp  UpdateChecker.hpp  build_installers.bat  commons.h  decodium_x64.iss  decodium_x64_win7.iss  decodium_x86.iss  decodium_x86_win7.iss  docker-build-linux.sh  helper_functions.cpp  main.cpp  main_qml.cpp  revision_utils.cpp  revision_utils.hpp  scs_version.h
Detector/: Detector.cpp  Detector.hpp
Modulator/: Modulator.cpp
Network/: Cloudlog.cpp  FileDownload.cpp  LotWUsers.cpp  MessageClient.cpp  NtpClient.cpp  PSKReporter.cpp
SampleDownloader/: RemoteFile.cpp
Transceiver/: OmniRig.cpp  TCITransceiver.cpp  TransceiverFactory.cpp
build-tools/: CMakeCache.txt  Makefile  cmake_install.cmake
build-w2/: CMakeCache.txt  Makefile  OmniRig.cpp  qrc_message_aggregator.cpp  qrc_rfanalyzer.cpp  qrc_style.cpp  scs_version.h  ui_Configuration.h  ui_QSYMessage.h  ui_about.h  ui_activeStations.h  ui_mainwindow.h  ui_widegraph.h
controllers/: AudioController.cpp  DecodeListModel.cpp  DecoderController.cpp  LogController.cpp  PSKReporterLite.cpp  TxController.cpp  WaterfallController.cpp
layouts/: ArcticBlue.dlay  OperatorNight.dlay  PhosphorGreen.dlay  WarmAmber.dlay
lib/: ft2_decode.f90
logbook/: WorkedBefore.cpp
models/: FoxLog.cpp  FrequencyList.cpp  Modes.cpp
qml/: RFAnalyzer.qml
qmlitems/: WaterfallItem.cpp
tools/: CMakeLists.txt  decodium_qso_sim.cpp  dxcert_generator.cpp  pack77_wrapper.f90
translations/: decodium_ca.qm  decodium_ca.ts  decodium_da.qm  decodium_da.ts  decodium_de.qm  decodium_de.ts  decodium_en.qm  decodium_en.ts  decodium_en_GB.qm  decodium_en_GB.ts  decodium_es.qm  decodium_es.ts  decodium_hu.qm  decodium_hu.ts  decodium_it.qm  decodium_it.ts  decodium_ja.qm  decodium_ja.ts  decodium_ru.qm  decodium_ru.ts  decodium_zh.qm  decodium_zh.ts  decodium_zh_TW.qm  decodium_zh_TW.ts
widgets/: QSYMessage.ui  RFAnalyzerWidget.cpp  RFAnalyzerWidget.h  SplashScreen.cpp  TimeSyncPanel.cpp  TimeSyncPanel.h  TimeSyncPanel.ui  about.cpp  about.h  about.ui  activeStations.ui  astro.cpp  asyncmodewidget.cpp  asyncmodewidget.h  displaytext.cpp  displaytext.h  logqso.cpp  mainwindow.cpp  (+3 more)
(+203 files in other folders)
